Bug 299516 - Widget's arrow button missing.
Summary: Widget's arrow button missing.
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-rssnow (other bugs)
Version First Reported In: 4.9.3
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Rob Scheepmaker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-06 18:03 UTC by dE
Modified: 2012-12-04 20:07 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.0
Sentry Crash Report:


Attachments
A grep'd strace which illustrates that the widget uses the incorrect image files (19.15 KB, application/octet-stream)
2012-11-26 15:55 UTC, Terseus
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dE 2012-05-06 18:03:48 UTC
Since the KDE 4.8.2 upgrade, the arrow buttons in the wiget is missing. You have to scroll accross the entries.
Comment 1 Terseus 2012-09-24 13:10:50 UTC
I can confirm this bug and add that it's just a visual bug: I can press where the arrows are supposed to be and they work but they're invisible.

My distro is Archlinux, using KDE version 4.9.1.
Comment 2 dE 2012-09-30 13:31:33 UTC
I was searching for this bug.

In KDE 4.9, this bug appears to be fixed on Gentoo.
Comment 3 bill p. (aka google01103) 2012-10-25 10:45:16 UTC
on openSUSE 4.9.2 I too experience this bug - works but not visible
Comment 4 dE 2012-10-25 11:39:45 UTC
This may be a qt bug.
Comment 5 Franky 2012-11-19 21:27:56 UTC
Can confirm this with KDE 4.9.3 on Kubuntu 12.04

Icons not visible, but working.

The Icons are still present as file 
> /usr/share/kde4/apps/desktoptheme/default/rssnow/arrows.svgz
but are not shown.
Comment 6 dE 2012-11-26 15:10:41 UTC
Can you try this as a new user?

How about installing another widget?
Comment 7 Terseus 2012-11-26 15:55:23 UTC
Created attachment 75491 [details]
A grep'd strace which illustrates that the widget uses the incorrect image files
Comment 8 Terseus 2012-11-26 15:55:48 UTC
I think I've found the problem.

After a "strace -e trace=file plasmoidviewer rssnow" I'd see that it try to access to the files left.svgz and right.svgz when my installation doesn't have them but have instead an arrows.svgz file.
I've attached a "grep -Hin '\.svgz'" of the strace file since the complete strace it's about 446Kb and this one is only 20kb, IMHO enough to see the problem.

After that I'd take a look at the RSSNOW repository and found one commit which merges left.svgz and right.svgz into arrows.svgz _without_ modifying the code that loads this images.
Link to the commit: https://projects.kde.org/projects/kde/kdeplasma-addons/repository/revisions/39f506cbb10b08f4c6f8e17048deae9da87812b3

The code that loads the old non-existent images is in scroller.cpp file, lines 60 and 65.
Link to the file: https://projects.kde.org/projects/kde/kdeplasma-addons/repository/revisions/master/entry/applets/rssnow/scroller.cpp#L60

Sorry but I don't have any knowledge of plasmoids nor svgz file loading, therefore I can't make the needed changes, I hope a developer see this post and fix the problem.

Thank you.
Comment 9 Jekyll Wu 2012-11-26 16:22:43 UTC
@ Giorgos, please take a look at this issue.
Comment 10 Franky 2012-11-26 16:57:34 UTC
 (In reply to comment #8)
> I think I've found the problem.

Thanks Therseus :-)

Could confirm your Posting.

I have copied the files left.svgz and right.svgz by extracting it from an older Package and placed it in the Folder 
> /usr/share/kde4/apps/desktoptheme/default/rssnow/
and the arrows are where they have to be.

Hopes, that Giorgios read this Bug report...
Comment 11 Aaron J. Seigo 2012-12-03 12:01:01 UTC
Git commit bdb6e754e82bbc279bee73da1c8e1615b05f77f5 by Aaron Seigo.
Committed on 03/12/2012 at 13:00.
Pushed by aseigo into branch 'master'.

use the merged arrows.svg

appears when the svg merge was done, the code changes weren't committed
along with the art update :/

M  +2    -2    applets/rssnow/scroller.cpp

http://commits.kde.org/kdeplasma-addons/bdb6e754e82bbc279bee73da1c8e1615b05f77f5
Comment 12 Franky 2012-12-04 20:07:28 UTC
Thanks Aaron J. Seigo :-)