use the merged arrows.svg

appears when the svg merge was done, the code changes weren't committed
along with the art update :/

BUG:299516